Fix header bar z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,7 @@ header {
 	position: sticky;
 	top: 0;
 	margin: -8px;
+	z-index: 1;
 
 	padding: 0.5em;
 	display: flex;
